[package]
name = "binance-proxy"
version = "0.1.0"
authors = ["MrEconomical"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4"
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1.23", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }